booklore/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booklore
  labels:
    app.kubernetes.io/version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booklore
  template:
    metadata:
      labels:
        app: booklore
        app.kubernetes.io/version: v1
    spec:
      containers:
        - name: server
          image: booklore/booklore:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: booklore-volume
              mountPath: /app/data
              subPath: data
            - name: booklore-volume
              mountPath: /books
              subPath: books
            - name: booklore-volume
              mountPath: /backdrop
              subPath: backdrop
      volumes:
        - name: booklore-volume
          persistentVolumeClaim:
            claimName: booklore-pvc
