booklore/service.yml
apiVersion: v1
kind: Service
metadata:
  name: booklore-service
spec:
  selector:
    app: booklore
  ports:
    - name: web
      protocol: TCP
      port: 3000
      targetPort: 3000
